# MPE-gtk

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
ManPageEditor/app/: Makefile.am
ManPageEditor/src/: callbacks.cpp  callbacks.h  files.cpp  globals.h  main.cpp  searchcallbacks.cpp  searchcallbacks.h  spellcheck.cpp
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  ru.mo  ru.po  ru.pot
resources/applications/: manpageeditor.desktop
resources/distributions/: ROSA-manpageeditor.spec
resources/help/: CreateHTML5Elements.js  help.html  main.css
resources/man/ru/: manpageeditor.1
src/: Makefile.am  Makefile.in  callbacks.cpp  callbacks.h  files.cpp  files.h  globals.cpp  globals.h  guis.cpp  guis.h  main.cpp  script.cpp  script.h  searchcallbacks.cpp  searchcallbacks.h  spellcheck.cpp  spellcheck.h
